# trecioji-uzduotis

./: CMakeLists.txt  README.md  duomenys.cpp  duomenys.h  ivedimas.cpp  ivedimas.h  main.cpp  rezultatas.cpp  rezultatas.h  rikiavimas.cpp  rikiavimas.h  studentas.cpp  studentas.h  tests.cpp  vertinimas.cpp  vertinimas.h  zmogus.cpp  zmogus.h
vertinimas/: vertinimas.sln  vertinimas.vcxproj  vertinimas.vcxproj.filters
vertinimas/vertinimas/x64/Debug/: vc143.idb  vertinimas.exe.recipe  vertinimas.ilk
vertinimas/vertinimas/x64/Debug/vertinimas.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  vertinimas.lastbuildstate
vertinimassetup/: vertinimassetup.vdproj
vertinimassetup/Debug/: vertinimassetup.msi
